# secure-ci-cd-supply-chain-platform

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  rendered.yaml
.github/workflows/: secure-supply-chain.yml
app/backend/: Dockerfile  pyproject.toml  requirements.txt
app/backend/src/: __init__.py  audit.py  auth.py  main.py  metrics.py  payments.py  severity.py
app/backend/tests/: conftest.py  test_auth.py  test_payments.py  test_security.py  test_severity.py
cosign/: README.md
docker/: docker-compose.yml
docs/: architecture.md  github-actions.md  incident-runbook.md  kubernetes-helm-deployment.md  local-gitlab-integration.md  pipeline-design.md  policy-as-code.md  remediation-guide.md  resume-bullets.md  sbom-and-image-signing.md  screenshots-checklist.md  security-controls.md  threat-model.md
k8s/: README.md  kind-config.yaml  namespace.yaml
sbom/: README.md
scripts/: check-prereqs.ps1  check-prereqs.sh  clean.ps1  clean.sh  create-kind-cluster.ps1  create-kind-cluster.sh  deploy-helm.ps1  deploy-helm.sh  generate-sbom.ps1  generate-sbom.sh  run-container-scan.ps1  run-container-scan.sh  run-dependency-scan.ps1  run-dependency-scan.sh  run-policy-checks.ps1  run-policy-checks.sh  run-sast.ps1  run-sast.sh  run-secret-scan.ps1  run-secret-scan.sh  sign-image.ps1  sign-image.sh  test-all.ps1  test-all.sh  verify-image.ps1  verify-image.sh
security/: README.md  api_exposure_check.py  bandit.yaml  gitleaks.toml  trivy.yaml
vulnerable-demo/: README.md  fake_secret_example.txt  intentionally_bad_api.py  vulnerable_requirements.txt
(+18 files in other folders)
